Portage 1.6.10, released (not yet-- waiting for A= removal) 
===================================

	*portage.py: remove gnome-apps, gnome-office, gnome-libs, add gnome-extra
	categories.

	*ebuild.sh, portage.py: You can now use USE variables in SRC_URI to
	conditionally include archives.  In MAINTAINER mode, all archives are
	automatically included so that maintainers can check SRC_URIs and also
	generate complete digests.  A new file-based DEPEND and RDEPEND-passing
	mechanism has been added.
	
	*ebuild.sh Now adds filesize to the digest files

Portage 1.6.9, released 15 Sep 2001
===================================

	*portage.py
	unmerge() now does not touch device nodes.  Unlinking them or touching them
	in any way is bad practice.


Portage 1.6.8, released 12 Sep 2001
===================================

	*portage.py
	movefile() will now unlink() destfile if it is a symlink.  Should fix 
	problems where file gets created at symlink target rather than replacing
	the symlink.

	*queryhost.sh (agriffis)
	Parallel pinging and other fixes.

Portage 1.6.7, released 05 Sep 2001
===================================

	*portage.py
	(last-minute fix)
	CONFIG_PROTECT unmerge protection is now observed for symlinks, fifos and
	device nodes.
	
	*portage.py
	Fixes for unmerging CONFIG_PROTECTed files.  Protected files are now *not*
	unlinked from the filesystem.  Messier but safer, and simplifies package
	upgrades.

	*emerge
	Emerge output cleanups for GNU info directory generation.  New --verbose
	mode; new CONFIG_PROTECT scanning feature to let people know when there are
	config files to be updated.  New "--help config" docs to explain how to
	do it.

Portage 1.6.6, released 01 Sep 2001
====================================

	*portage.py
	Upgraded directory merging over existing objects.  Existing symlinks that
	point to existing directories will be kept and used as is; directories will
	be used as-is; any other objects (broken symlinks, files) will be copied