@@ -42,7 +42,8 @@
 # X: build-in optional X (graphic server) support; RECOMMENDED
 # qt: build-in optional qt (X toolkit) support; RECOMMENDED
 # gtk: build-in optional gtk (X toolkit) support; RECOMMENDED
-# objprelink: use prelinking technology for faster app startup. currently used by qt and kde. makes most machines faster but some slower, so YMMV.
+# objprelink: use prelinking technology for faster app startup;
+# currently used by qt and kde. makes most machines faster but some slower; RECOMMENDED
 # pcmcia-cs: DEPRECIATED
 # lvm: DEPRECIATED
 # lcms: DEPRECIATED
